BUT-217 fixed: Readonly mode renders component twice, fixed: Input-group-addon renders component twice; fixed wrong width for input addons

--- a/components/src/main/resources/META-INF/resources/butterfaces-css/butterfaces-combobox.css
+++ b/components/src/main/resources/META-INF/resources/butterfaces-css/butterfaces-combobox.css
@@ -31,5 +31,5 @@
 }
 
 .butter-component-combobox select {
-    display: none;
+    display: none !important;
 }
